<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".maps.MapsFragment"
    android:id="@+id/maps_parent">

    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/maps_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maps_button"
        android:textSize="36sp"
        android:textAllCaps="true"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="30dp"
        android:id="@+id/map_size_ll"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"

        app:layout_constraintTop_toBottomOf="@id/maps_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_et"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/height_et"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/width_et"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/width_et"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

<!--    <TextView-->
<!--        android:id="@+id/map_name_tv"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Yerevan"-->
<!--        android:textSize="20sp"-->
<!--        android:layout_marginBottom="16dp"-->

<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintBottom_toTopOf="@id/map_preview_ll" />-->

<!--    <LinearLayout-->
<!--        android:id="@+id/map_preview_ll"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="200dp"-->
<!--        android:background="@drawable/map_preview_box"-->
<!--        android:orientation="horizontal"-->

<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <ImageButton-->
<!--        android:id="@+id/next_map_button"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:src="@drawable/map_change_arrow_right"-->
<!--        android:background="@color/purple_500"-->

<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@id/map_preview_ll"-->
<!--        app:layout_constraintEnd_toEndOf="parent"/>-->

<!--    <ImageButton-->
<!--        android:id="@+id/previous_map_button"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:src="@drawable/map_change_arrow_left"-->
<!--        android:background="@color/purple_500"-->

<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="@id/map_preview_ll"/>-->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"

        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/map_size_ll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/maps_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable"
            android:scrollbars="vertical"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/maps_view_pager"
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintDimensionRatio="W, 1:1"
            app:layout_constraintTop_toBottomOf="@id/maps_tab_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>